myapp-with-nginx-ingress-controller/nginx-deployment-and-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default # You can change this to your specific namespace
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27 # Specify a stable image version
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "1"
