myapp-with-nginx-ingress-controller/nginx-service-and-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP  # Restricts access to within the cluster
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80            # Internal service port
      targetPort: 80      # Container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Optional useful annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Ensures proper path rewriting
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Set to true if using HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"  # Set to true if forcing HTTPS
spec:
  ingressClassName: nginx  # You can move this from annotation to here in newer versions
  rules:
  - host: webapp.wingserp.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
